# fzm

./: .gitignore  README.md  app.py  match.py  pyproject.toml
src/fzm/: app.py  cli.py  match.py
